Bug 417216 - Installer fails to install under Fedora add-on named "Temperatures / Voltages / Fan Speeds " by mcrohner.
Summary: Installer fails to install under Fedora add-on named "Temperatures / Voltages...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.73.0
Platform: Fedora RPMs Linux
: VHI normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-06 08:39 UTC by Ricky Tigg
Modified: 2020-08-24 05:59 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.74
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ricky Tigg 2020-02-06 08:39:21 UTC
SUMMARY
Installer fails to install under Fedora add-on named "Temperatures / Voltages / Fan Speeds " by mcrohner.

STEPS TO REPRODUCE
1. Open from terminal: 'ksysguard'
2. Select from menu: File | Download New Tabs...
3. Install Add-on named "Temperatures / Voltages / Fan Speeds " by mcrohner.

OBSERVED RESULT
step 2 – output: endless 
"QPixmap::scaled: Pixmap is a null pixmap"

step 3 – outputs:
"org.kde.knewstuff.core: Cannot move file ' "/tmp/YPjckj-TempsVoltsFans.sgrd" ' to destination ' "/home/yk/.local/share/ksysguard//Temperatures / Voltages / Fan Speeds-1.0.sgrd" '"

then endless

"QPixmap::scaled: Pixmap is a null pixmap"

SOFTWARE/OS VERSIONS
Linux (x86_64) release 5.4.15-200.fc31.x86_64
KDE Frameworks 5.66.0
Qt 5.13.2 (built against 5.13.2)
The xcb windowing system
Comment 1 Patrick Silva 2020-02-28 19:30:25 UTC
Same thing here. Furthermore, addon installer window says "Could not install 'Temperatures / Voltages / Fan Speeds': file not found". But we can download the file in the following link, under "Files" section:
https://store.kde.org/p/1338314

Operating System: Arch Linux 
KDE Plasma Version: 5.18.2
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 2 Alexander Lohnau 2020-08-11 17:44:37 UTC
Can confirm the installation failure on KDE Neon unstable.
Comment 3 Bug Janitor Service 2020-08-23 08:58:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/37
Comment 4 Alexander Lohnau 2020-08-24 05:59:48 UTC
Git commit 2feac54b69fd3822a8819fe6b1d9b944bc81e731 by Alexander Lohnau.
Committed on 23/08/2020 at 08:54.
Pushed by alex into branch 'master'.

Remove slashes from entry name when interpreting it as path
FIXED-IN: 5.74

M  +2    -1    src/core/installation.cpp

https://invent.kde.org/frameworks/knewstuff/commit/2feac54b69fd3822a8819fe6b1d9b944bc81e731