Remove slashes from entry name when interpreting it as path

BUG: 417216
FIXED-IN: 5.74